fix: Snackbar overlaps FAB

--- a/src/scss/components/Snackbar.scss
+++ b/src/scss/components/Snackbar.scss
@@ -3,8 +3,8 @@
 .snackbar {
   // Position
   position: absolute;
-  bottom: 0.5rem;
-  left: 0.5rem;
+  bottom: 6.375rem;
+  left: 0.75rem;
 
   // Layout
   display: flex;
@@ -13,7 +13,7 @@
   align-items: center;
   gap: 0.75rem;
   padding: 0.75rem 1rem;
-  width: calc(100vw - 1.5rem);
+  width: calc(100vw - 2rem);
 
   // Style
   background-color: var(--inverse-surface);
@@ -32,6 +32,11 @@
     transform: scale(1) translateY(0);
     pointer-events: initial;
   }
+
+  &--above-fab {
+    @extend .snackbar;
+    bottom: 10.875rem;
+  }
 }
 
 .snackbar__label {
@@ -46,8 +51,13 @@
 
 @include b.breakpoint("sm") {
   .snackbar {
+    bottom: 1rem;
     gap: 3rem;
     justify-content: flex-start;
     width: fit-content;
+
+    &--above-fab {
+      bottom: 1rem;
+    }
   }
 }
